<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:id="@+id/detail_scrollview"
            tools:context="com.example.sunchaser.app.activity.GeolocationDetailActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- IMAGE GALLERY -->

        <RelativeLayout
            android:id="@+id/location_detail_image_container"
            android:layout_width="match_parent"
            android:layout_height="250dip"
            android:background="@color/black"
            android:gravity="center" >
        </RelativeLayout>

        <!-- WEATHER -->

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >
            <LinearLayout
                android:id="@+id/location_detail_weather_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Populated later with weather forecast -->
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/location_detail_weather_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/link_text_material_light"
            android:text="@string/location_detail_weather_attribution"
            />



        <!-- Container for text content, buttons, etc. -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <!-- WIKIPEDIA EXTRACT -->

            <RelativeLayout
                android:id="@+id/location_detail_wiki_extract_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >
                <TextView
                    android:id="@+id/location_detail_wiki_title"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:text="@string/location_detail_wiki_title"
                    />
                <TextView
                    android:id="@+id/location_detail_wiki_extract_toggle_text"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignBaseline="@id/location_detail_wiki_title"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/location_detail_wiki_extract_hide"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/location_detail_wiki_extract"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:id="@+id/location_detail_wiki_attribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:textColor="@color/link_text_material_light"
                android:text="@string/location_detail_wiki_attribution"
                />

            <!-- DISTANCE FROM CURRENT LOCATION -->


            <!-- NAV BUTTONS -->

            <Button
                android:id="@+id/location_detail_accommodation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/location_detail_accommodation"
                />

            <Button
                android:id="@+id/location_detail_places_of_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/location_detail_places_of_interest"
                />

            <Button
                android:id="@+id/location_detail_get_directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/location_detail_get_directions"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
