<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.sunchaser.app.activity.PlaceOfInterestListActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/button_material_light"
        android:padding="16dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/search_description_radius" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/search_radiusStartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="0"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_radiusSeekBar"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/search_radiusStartLabel"
                android:layout_toEndOf="@+id/search_radiusStartLabel"
                android:layout_toLeftOf="@+id/search_radiusEndLabel"
                android:layout_toStartOf="@+id/search_radiusEndLabel"
                android:max="15"
                android:progress="5"
                />
            <TextView
                android:id="@+id/search_radiusEndLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="15km"
                />
        </RelativeLayout>

        <!-- Place type filters -->

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/search_description_types"
            />

        <Spinner
            android:id="@+id/search_filter_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/search_filter_prompt"/>
    </LinearLayout>

    <ListView
        android:id="@+id/place_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5" >

    </ListView>

    <Button android:id="@+id/place_list_show_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:listPreferredItemHeight"
            android:text="@string/place_list_show_all_on_map"
            android:textAllCaps="true"
        />

</LinearLayout>
