<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/placeDetail_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/place_detail_image_container"
                android:layout_width="match_parent"
                android:layout_height="250dip"
                android:background="@color/black"
                android:gravity="center" >
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >

                <!--<LinearLayout android:orientation="horizontal"-->
                              <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!-->-->

                <TextView
                    android:id="@+id/placeDetail_vicinity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    />

                <LinearLayout
                    android:id="@+id/place_detail_rating_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/placeDetail_ratingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dip"
                        android:text="@string/place_of_interest_detail_rating"
                        android:textSize="16sp"
                        />

                    <RatingBar
                        android:id="@+id/placeDetail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:max="5"
                        android:stepSize="0.05"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/place_detail_price_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/placeDetail_priceLevelTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dip"
                        android:text="@string/place_of_interest_detail_price_level"
                        android:textSize="16sp"
                        />

                    <RatingBar
                        android:id="@+id/placeDetail_priceLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:numStars="5"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/place_detail_get_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="@string/location_detail_get_directions"
        />

</LinearLayout>